deploy/kubernetes/pdp/ingress-ui-http-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdp-ui
  namespace: trustcloud
  labels:
    app.kubernetes.io/name: pdp
    app.kubernetes.io/part-of: trustcloud
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: trust-cloud.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdp
                port:
                  number: 8443
